<resources>
    <string name="app_name">Materyal Design</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Поиск в Википедии</string>
    <string name="wiki_helper_text">Ищет термин в Википедии</string>
    <string name="favourite">Предпочтение</string>
    <string name="settings">Настройки</string>
    <string name="search">Найти</string>

    <string name="chip_default">Default</string>
    <string name="chip_entry">Entry</string>
    <string name="chip_choice">Choice</string>
    <string name="chip_action">Action</string>
    <string name="chip_filter">Filter</string>
    <string name="chip_background_color">Background Color</string>
    <string name="chip_ripple_color">Ripple Color</string>
    <string name="chip_chip_icon">Chip icon</string>
    <string name="chip_chip">Chip</string>
    <string name="chip_group">Group</string>
    <string name="chip_one">One</string>
    <string name="chip_two">Two</string>
    <string name="text_for_choose_one">Choose One</string>
    <string name="chip_choice_a">Choice A</string>
    <string name="chip_choice_b">Choice B</string>
    <string name="chip_choice_c">Choice C</string>
    <string name="chip_in">in</string>
    <string name="chip_single">single</string>
    <string name="chip_line">line</string>
    <string name="chip_add">add</string>
    <string name="chip_a">a</string>
    <string name="chip_horizontal">horizontal</string>
    <string name="chip_scroll">scroll</string>
    <string name="chip_close_icon_listener">Close Icon Listener</string>
    <string name="material_button_raised_button">Raised Button</string>
    <string name="material_button_unelevated_button">Unelevated Button</string>
    <string name="material_button_outlined_button">Outlined Button</string>
    <string name="material_button_text_button">Text Button</string>
    <string name="cb_checkbox">CheckBox</string>
    <string name="rb_radio_button">Radio Button</string>
    <string name="sw_switch">Switch</string>
    <string name="text_input_filled_box_text_field">Filled Box Text Field</string>
    <string name="text_input_text">Text</string>
    <string name="text_input_width_outlined_box_text_field">Outlined Box Text Field</string>
    <string name="tab_1">Tab 1</string>
    <string name="tab_2">Tab 2</string>
    <string name="tab_3">Tab 3</string>
    <string name="text_view_card">Card</string>
    <string name="some_big_text">Здесь должен быть большой текст. Добавим в него немного текста, где должна быть ссылка</string>

</resources>